--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/custom.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -17,7 +17,25 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<section>Slide 2</section>
+					<section>Vertical 1</section>
+					<section>Vertical 2</section>
+				</section>
+				<section>Slide 3</section>
+				<section>
+					<pre><code data-trim data-noescape data-line-numbers="3-4|5-6|7|8-9">
+						# clean a .dat file coming from the Confocal
+						# and export it to .xyz
+						file.name <- "confoc_3d.dat"
+						file.path <- "c:/Rprojects/rockart/www/"
+						file.data <- read.table(paste0(file.path, file.name),
+												header = FALSE, sep = "")
+						file.data <- file.data[, c(1, 2, 3)]
+						write.table(file.data, paste0(file.path, "confoc_3d.xyz"),
+									sep = " ", row.names = FALSE, col.names = FALSE)
+					</code></pre>
+				  </section>
 			</div>
 		</div>
 
@@ -31,6 +49,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+				slideNumber: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
