--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 				<section>
 
-					<section>
+					<section data-background-image="https://raw.githubusercontent.com/zoometh/rockart/main/www/mont_lassois.png">
 						<h2>Introduction</h2>
-						<p>Human actions create marks on natural backgrounds</p>
-						<img src="C:/Rprojects/rockart/www/mont_lassois_zoom.png" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+						Human actions create marks on natural backgrounds
+						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/mont_lassois.png" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 					</section>
 					<section>
 						<h2>At the &mu;m scale</h2>
