--- a/index.html
+++ b/index.html
@@ -291,11 +291,15 @@
 
 					<section>
 						<h3>Confocal acquisition window relocation</h3>
-						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/3DHOP_lithic_roi_photogram.png" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
-						<small><b>Photogrammetry</b> 3D acquisition with <a href="https://alicevision.org/#meshroom">Meshroom</a></small>
+						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/3DHOP_lithic_roi_photogram.png" alt="" style="height: 420px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+						<small><b>Photogrammetry</b> 3D acquisition with <a href="https://alicevision.org/#meshroom">Meshroom</a> or online <a href="https://github.com/zoometh/rockart/blob/main/MeshroomColab.ipynb">Meshroom for GoogleColab</a></small>
 						<aside class="notes">
 							Here with Meshroom
 						</aside>
+					</section>
+
+					<section data-state="header1" data-background-iframe="https://zoometh.github.io/3DHOP/minimal/lithic_tool_confocal.html" data-background-interactive>
+						<style>.header2 header:after { content: "Web3D"; }</style>
 					</section>
 
 					<section>
