--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
 						<small><b>Photogrammetry</b> 3D acquisition with <a href="https://alicevision.org/#meshroom">Meshroom</a> or online <a href="https://github.com/zoometh/rockart/blob/main/MeshroomColab.ipynb">Meshroom for GoogleColab</a></small>
 						<aside class="notes">
 							Here with Meshroom
+							Resiudal error
 						</aside>
 					</section>
 
@@ -304,10 +305,11 @@
 
 					<section>
 						<h3>Aligning and merging meshes</h3>
-						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/3DHOP_lithic_roi_align.png" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
-						<small>Align the STL and the Photogrammetry 3D models with <a href="https://www.danielgm.net/cc/">Cloud Compare</a></small>
+						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/Meshlab_align.png" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+						<small>Align the STL and the Photogrammetry 3D models with <a href="https://www.meshlab.net/">Meshlab</a></small>
 						<aside class="notes">
-							Here with CloudCompare
+							Here with Meshlab
+							Resiudal error
 						</aside>
 					</section>
 
