--- a/projects/caa_3dlithic.html
+++ b/projects/caa_3dlithic.html
@@ -8,12 +8,12 @@
 		<meta name="description" content="Integration of multiscalar 3D model for use-wear analysis">
 		<meta name="author" content="Thomas Huet">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/custom.css">
+		<link rel="stylesheet" href="../dist/reset.css">
+		<link rel="stylesheet" href="../dist/reveal.css">
+		<link rel="stylesheet" href="../dist/theme/custom.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 
 		<link rel="icon" href="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_rockart_1.png">
 	</head>
@@ -317,7 +317,7 @@
 							Resiudal error
 						</aside>
 					</section>
-  
+
 					<section>
 						<h3>Aligning and merging meshes</h3>
 						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/Meshlab-aligned.gif" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
@@ -333,7 +333,7 @@
 						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/blender-aligned-999.gif" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 						<small>Open models in <a href="https://www.blender.org/">Blender</a></small>
 						<aside class="notes">
-							Here with  Blender
+							Here with Blender
 						</aside>
 					</section>
 
@@ -578,10 +578,10 @@
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="../dist/reveal.js"></script>
+		<script src="../plugin/notes/notes.js"></script>
+		<script src="../plugin/markdown/markdown.js"></script>
+		<script src="../plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
