--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -8,12 +8,12 @@
 		<meta name="description" content="Integration of multiscalar 3D model for use-wear analysis">
 		<meta name="author" content="Thomas Huet">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/custom.css">
+		<link rel="stylesheet" href="../dist/reset.css">
+		<link rel="stylesheet" href="../dist/reveal.css">
+		<link rel="stylesheet" href="../dist/theme/custom.css">
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 
 		<link rel="icon" href="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_rockart_1.png">
 	</head>
@@ -27,22 +27,58 @@
 					<a href="https://github.com/zoometh/rockart">
 						<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_rockart_1.png" alt="" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 					</a>
-					<h3>Web3D and multiscalar integration of 3D models</h3>
-					<small><b>9<sup>th</sup> Seminar of Prehistoric Technology</b>, CSIC-IMF, Barcelona, 2-4 May 2022</small>
+					<h3>Hypersectral analysis and semantisation of the Roca dels Moros (Lleida, Spain) </h3>
+					<!-- <small><b>9<sup>th</sup> Seminar of Prehistoric Technology</b>, CSIC-IMF, Barcelona, 2-4 May 2022</small> -->
 					<p>
 						<smaller>
-							<!-- <div> -->
 								<span style="">
-								<a href="https://github.com/zoometh/thomashuet#dr-thomas-huet-">Thomas Huet</a><br>
-								<small>University of Oxford</small><br>
-							 	<a href="https://www.arch.ox.ac.uk/people/dr-thomas-huet"> 
-								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 80px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
+								Thomas Huet <small>University of Oxford</small><br> 
+								Claudia Scuito <small>Universitat di Pisa</small><br> 
+								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
+								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-pisa.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 								</a>
 								</span>
-							<!-- </div> -->
 							</smaller>
 					</p>
 				</section>
+
+				<section data-background-iframe="https://visual.ariadne-infrastructure.eu/browse">
+					<div style="position: absolute; width: 40%; left:0px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Ariadneplus</h2>
+						<!-- <smaller>EAMENA-0164997</smaller> -->
+						<p> The <b>Visual Media Service</b> for the showcase of 3D data, RTI and gigapixel image (IIIF). Use 3DHOP for 3D models<br>
+						<br>
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+					</aside>
+				</section>
+
+				<section data-background-iframe="http://patrimoni.gencat.cat/ca/giravolt/els-models-3d">
+					<div style="position: absolute; width: 40%; left:0px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Giravolt</h2>
+						<!-- <smaller>EAMENA-0164997</smaller> -->
+						<p> Dissemination of 3D techniques and best practices in heritage institutions. 3D digitization of heritage objects deposited on Sketchfab, CC-BY license<br>
+						<br>
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+					</aside>
+				</section>
+
+				<section data-background-iframe="https://zoometh.github.io/3DHOP/minimal/cogul.html">
+					<div style="position: absolute; width: 40%; left:0px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>3DHOP/GitHub</h2>
+						<!-- <smaller>EAMENA-0164997</smaller> -->
+						<p>3DHOP/GitHub integration<br>
+						<br>
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+						Pickup point
+					</aside>
+				</section>
+				
 
 				<section>
 					<section data-auto-animate data-background-image="https://raw.githubusercontent.com/zoometh/rockart/main/www/mont_lassois.jpg" data-background-opacity = 0.3>
@@ -317,7 +353,7 @@
 							Resiudal error
 						</aside>
 					</section>
-  
+
 					<section>
 						<h3>Aligning and merging meshes</h3>
 						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/Meshlab-aligned.gif" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
@@ -333,7 +369,7 @@
 						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/blender-aligned-999.gif" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 						<small>Open models in <a href="https://www.blender.org/">Blender</a></small>
 						<aside class="notes">
-							Here with  Blender
+							Here with Blender
 						</aside>
 					</section>
 
@@ -578,10 +614,10 @@
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="../dist/reveal.js"></script>
+		<script src="../plugin/notes/notes.js"></script>
+		<script src="../plugin/markdown/markdown.js"></script>
+		<script src="../plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
