--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Web3D - multiscalar</title>
+		<title>Cogul</title>
 		<meta name="description" content="Integration of multiscalar 3D model for use-wear analysis">
 		<meta name="author" content="Thomas Huet">
 
@@ -15,7 +15,7 @@
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 
-		<link rel="icon" href="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_rockart_1.png">
+		<link rel="icon" href="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_cogul.png">
 	</head>
 	<body>
 		<div class="reveal">
@@ -79,6 +79,18 @@
 					</aside>
 				</section>
 				
+				<section data-background-iframe="https://zoometh.github.io/iconr/index.html">
+					<div style="position: absolute; width: 40%; left:0px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Iconr package</h2>
+						<!-- <smaller>EAMENA-0164997</smaller> -->
+						<p>The R package iconr is grounded in graph theory and spatial analysis to offer concepts and functions for modeling Prehistoric iconographic compositions and preparing for further analysis (clustering, typology tree, Harris diagram, etc.). The package purpose is to contribute to cross-cultural comparison through a greater normalization of quantitative analysis.<br>
+						<br>
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+						Pickup point
+					</aside>
+				</section>
 
 				<section>
 					<section data-auto-animate data-background-image="https://raw.githubusercontent.com/zoometh/rockart/main/www/mont_lassois.jpg" data-background-opacity = 0.3>
