--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -30,8 +30,8 @@
 					<p>
 						<smaller>
 								<span style="">
-								Thomas Huet <small>University of Oxford</small><br>
-								Claudia Scuito <small>Universitat di Pisa</small><br> 
+								Thomas Huet <smaller> University of Oxford</smaller><br>
+								Claudia Scuito <smaller> Universitat di Pisa</smaller><br> 
 								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-pisa.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 								</a>
