--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -29,9 +29,9 @@
 					<!-- <small><b>9<sup>th</sup> Seminar of Prehistoric Technology</b>, CSIC-IMF, Barcelona, 2-4 May 2022</small> -->
 					<p>
 						<smaller>
-								<span style="">
-								Thomas Huet <smaller> University of Oxford</smaller><br>
-								Claudia Scuito <smaller> Universitat di Pisa</smaller><br> 
+								<span>
+								<span style="font-size: 40px;">Thomas Huet</span> <span style="font-size: 30px;">University of Oxford</span><br>
+								<span style="font-size: 40px;">Claudia Sciuto</span> <span style="font-size: 30px;">Università di Pisa</span><br>
 								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 								<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-pisa.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 								</a>
