--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -46,27 +46,55 @@
 					</aside>
 				</section>
 
-				<section data-transition="slide" data-background="#00ff00" data-background-transition="zoom">
-					<h2>Technics</h2>
+				<section data-transition="slide" data-background="#ff0000" data-background-transition="slide">
+					<h1>Study of the Technics</h1>
 				</section>
 
-				<section data-background-iframe="https://en.wikipedia.org/wiki/Hyperspectral_imaging">
+				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_hyperspect.png">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Hypersectral</h2>
 						<!-- <smaller>composition analysis</smaller> -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat<br>
-						<br>
+						<p>Hyperspectral imaging (HSI) is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared</p>
+						<!-- <br><br> -->
+						<p><span style="font-size: 15px;">Linderholm, J., Geladi, P., & <b>Sciuto, C.</b> (2015). Field-based near infrared spectroscopy for analysis of Scandinavian Stone Age rock paintings. Journal of near Infrared spectroscopy, 23(4), 227-236, doi: <a href="https://doi.org/10.1255/jnirs.1172">https://doi.org/10.1255/jnirs.1172</a></span></p>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
 					<aside class="notes">
 					</aside>
 				</section>
 
-				<section data-background-iframe="https://www.rsc.org/images/portable-x-ray-fluorescence-analysis-technical-brief-41_tcm18-214830.pdf">
+				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_hyperspect_1.png">
+					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Hypersectral</h2>
+						<!-- <smaller>composition analysis</smaller> -->
+						<!-- <p>Hyperspectral imaging (HSI) is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared.
+							<br>
+						<br> -->
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+					</aside>
+				</section>
+
+				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_hyperspect_2.png">
+					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Hypersectral</h2>
+						<!-- <smaller>composition analysis</smaller> -->
+						<!-- <p>Hyperspectral imaging (HSI) is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared.
+							<br>
+						<br> -->
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+					</aside>
+				</section>
+
+				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_xrf.png">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>pXRF</h2>
-						<!-- <smaller>composition analysis</smaller> -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat<br>
+						<small>XRF mapping on roman painted plasters</small>
+						<p>Portable XRF (pXRF) to characteristise chemical elements
+							<br>
 						<br>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
@@ -77,23 +105,25 @@
 				<section data-background-iframe="https://www.dinolite-uk.com/">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>DinoLite</h2>
-						<!-- <smaller>composition analysis</smaller> -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat<br>
+						<!-- <smaller>AM4013MZT(R9)</smaller> -->
+						<p>Portable electronic magnifier (x20 - x200) used to study the technics of engravings and the superimpositions between engravings<br>
 						<br>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
 					<aside class="notes">
+						Used in Sauri (Pallars Sobira)
 					</aside>
 				</section>
 
-				<section data-transition="slide" data-background="#ff0000" data-background-transition="zoom">
-					<h2>Iconography</h2>
+				<section data-transition="slide" data-background="#00ff00" data-background-transition="slide">
+					<h1>Study of the Iconography</h1>
 				</section>
 
 				<section data-background-iframe="https://zoometh.github.io/iconr/index.html">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Iconr package</h2>
 						<smaller>composition analysis</smaller>
+						<p><span style="font-size: 15px;"><b>Huet, T.</b>, Pozo, J. M., & Alexander, C. (2021). Analysis of Prehistoric Iconography with the R package iconr. Journal of Open Source Software, 6(61), 3191, doi: <a href="https://doi.org/10.21105/joss.03191">https://doi.org/10.21105/joss.03191</a></span></p>
 						<!-- <p>The R package iconr is grounded in graph theory and spatial analysis to offer concepts and functions to contribute to cross-cultural comparison through a greater normalization of quantitative analysis.<br> -->
 						<!-- <br> -->
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
@@ -106,7 +136,7 @@
 					<div style="position: absolute; width: 30%; right:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Iconr package</h2>
 						<smaller>Typology</smaller>
-						<p>This thesaurus will be aligned to a standard thesaurus (ex; Getty AAT)<br>
+						<p>The Iconr thesaurus will be aligned to the Getty Art & Architecture Thesaurus (AAT) and/or the Getty Iconography Authority (IA): thesauri for art, architecture and material culture<br>
 						<br>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
@@ -126,6 +156,10 @@
 					</aside>
 				</section>
 
+				<section data-transition="slide" data-background="#0000ff" data-background-transition="slide">
+					<h1>Data management</h1>
+				</section>
+
 				<section data-background-iframe="https://patrimoni.gencat.cat/ca/monuments/monumentos/conjunt-rupestre-de-la-roca-dels-moros-el-cogul/visita-virtual/visita-lliure/">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Conjunt rupestre<br>La Roca dels Moros</h2>
@@ -140,7 +174,7 @@
 
 				<section data-background-iframe="https://visual.ariadne-infrastructure.eu/browse">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
-						<h2>Ariadneplus</h2>
+						<h2>ARIADNEplus</h2>
 						<!-- <smaller>EAMENA-0164997</smaller> -->
 						<p> The <b>Visual Media Service</b> for the showcase of 3D data, RTI and gigapixel image (IIIF). Use 3DHOP for 3D models<br>
 						<br>
@@ -162,12 +196,8 @@
 					</aside>
 				</section>
 
-				<section data-transition="slide" data-background="#00ff" data-background-transition="zoom">
-					<h2>IT</h2>
-				</section>
-
 				<section data-background-iframe="https://zoometh.github.io/3DHOP/minimal/cogul.html">
-					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+					<div style="position: absolute; width: 30%; left:-200px ; top:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>3DHOP/GitHub</h2>
 						<!-- <smaller>EAMENA-0164997</smaller> -->
 						<p>We propose an integration of our research on 3DHOP/GitHub<br>
