--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -47,14 +47,14 @@
 				</section>
 
 				<section data-transition="slide" data-background="#ff0000" data-background-transition="slide">
-					<h1>Study of the Technics</h1>
+					<h1>Study of representation techniques</h1>
 				</section>
 
 				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_hyperspect.png">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
-						<h2>Hypersectral</h2>
+						<h2>Paintings</h2>
 						<!-- <smaller>composition analysis</smaller> -->
-						<p>Hyperspectral imaging (HSI) is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared</p>
+						<p><b>Hyperspectral imaging (HSI)</b> is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared</p>
 						<!-- <br><br> -->
 						<p><span style="font-size: 15px;">Linderholm, J., Geladi, P., & <b>Sciuto, C.</b> (2015). Field-based near infrared spectroscopy for analysis of Scandinavian Stone Age rock paintings. Journal of near Infrared spectroscopy, 23(4), 227-236, doi: <a href="https://doi.org/10.1255/jnirs.1172">https://doi.org/10.1255/jnirs.1172</a></span></p>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
@@ -65,7 +65,7 @@
 
 				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_hyperspect_1.png">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
-						<h2>Hypersectral</h2>
+						<h2>Paintings</h2>
 						<!-- <smaller>composition analysis</smaller> -->
 						<!-- <p>Hyperspectral imaging (HSI) is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared.
 							<br>
@@ -78,7 +78,7 @@
 
 				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_hyperspect_2.png">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
-						<h2>Hypersectral</h2>
+						<h2>Paintings</h2>
 						<!-- <smaller>composition analysis</smaller> -->
 						<!-- <p>Hyperspectral imaging (HSI) is a technique that allows the collection and overlapping of images in different bands of the electromagnetic spectrum, usually the visible and the Near Infrared.
 							<br>
@@ -91,22 +91,20 @@
 
 				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/tek_xrf.png">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
-						<h2>pXRF</h2>
-						<small>XRF mapping on roman painted plasters</small>
-						<p>Portable XRF (pXRF) to characteristise chemical elements
-							<br>
-						<br>
+						<h2>Paintings</h2>
+						<p><b>X-Ray Fluorescence spectrometry (XRF)</b> and Portable XRF (pXRF) to characteristise chemical elements
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
 					<aside class="notes">
+						mapping on roman painted plasters
 					</aside>
 				</section>
 
 				<section data-background-iframe="https://www.dinolite-uk.com/">
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
-						<h2>DinoLite</h2>
+						<h2>Engravings</h2>
 						<!-- <smaller>AM4013MZT(R9)</smaller> -->
-						<p>Portable electronic magnifier (x20 - x200) used to study the technics of engravings and the superimpositions between engravings<br>
+						<p><b>DinoLite</b> Portable electronic magnifier (x20 - x200) used to study the technics of engravings and the superimpositions between engravings<br>
 						<br>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
@@ -116,7 +114,7 @@
 				</section>
 
 				<section data-transition="slide" data-background="#00ff00" data-background-transition="slide">
-					<h1>Study of the Iconography</h1>
+					<h1>Study of representation iconography</h1>
 				</section>
 
 				<section data-background-iframe="https://zoometh.github.io/iconr/index.html">
@@ -157,7 +155,7 @@
 				</section>
 
 				<section data-transition="slide" data-background="#0000ff" data-background-transition="slide">
-					<h1>Data management</h1>
+					<h1>Research data management</h1>
 				</section>
 
 				<section data-background-iframe="https://patrimoni.gencat.cat/ca/monuments/monumentos/conjunt-rupestre-de-la-roca-dels-moros-el-cogul/visita-virtual/visita-lliure/">
