--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -42,7 +42,18 @@
 
 				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_cogul-workflow.png">
 					<aside class="notes">
-						Workflow
+						Analysis
+						We propose a study of the Roca dels Moros with a characterization of the painting technique and a characterization of the iconographic content of the panel.
+						The painting techniques will be characterized by hyperspectral and pXRF analysis. The hyperspectral analysis will characterize the chemical signature of the paintings. The pXRF is a complementary solution…. Macro photos will be taken with a DinoLite (x20-x200) useful for superimpostions
+						The iconography will be characterized using the model of the icon R package which allows at the same time the spatial distribution, the classification in standardized categories, and the analysis of the shapes.
+						These different results will be confronted to each other by a multifactorial analysis (MFA).
+						Outputs
+						Our approach is clearly oriented towrd Open Science
+						If we are able to recognize statistical regularities in the technical and iconographic signatures, we aim to publish them in a scientific journal.
+						The workflow including data collection, data description, data storage, etc., in a word the DMP, as well as the informatics (code) will be published in a methodological article.
+						Our data, both for technical and iconographic signatures, will be published in a data paper.
+						Finally, we also aim at open source and free access in order to provide IT tools to a large public and/or to the scientific community.
+
 					</aside>
 				</section>
 
@@ -108,7 +119,7 @@
 				</section>
 
 				<section data-background-iframe="https://zoometh.github.io/iconr/index.html">
-					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+					<div style="position: absolute; width: 30%; right:-100px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Iconr package</h2>
 						<smaller>composition analysis</smaller>
 						<p><span style="font-size: 15px;"><b>Huet, T.</b>, Pozo, J. M., & Alexander, C. (2021). Analysis of Prehistoric Iconography with the R package iconr. Journal of Open Source Software, 6(61), 3191, doi: <a href="https://doi.org/10.21105/joss.03191">https://doi.org/10.21105/joss.03191</a></span></p>
@@ -121,7 +132,7 @@
 				</section>
 
 				<section data-background-iframe="https://zoometh.github.io/iconr/articles/img/typo_gu_figuratif.html">
-					<div style="position: absolute; width: 30%; right:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+					<div style="position: absolute; width: 30%; right:-100px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Iconr package</h2>
 						<smaller>Typology</smaller>
 						<p>The Iconr thesaurus will be aligned to the Getty Art & Architecture Thesaurus (AAT) and/or the Getty Iconography Authority (IA): thesauri for art, architecture and material culture<br>
@@ -152,8 +163,10 @@
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>Conjunt rupestre<br>La Roca dels Moros</h2>
 						<!-- <smaller>EAMENA-0164997</smaller> -->
-						<p>Use interactive web IIIF (Openseadragon) alongside with 3D viewer (Sketchfab)<br>
-						<br>
+						<p>Use an interactive web IIIF<sup>*</sup>	 (Openseadragon) alongside with a 3D viewer (Sketchfab)<br>
+							<br>
+						<small>* International Image Interoperability Framework</small>
+						
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
 					<aside class="notes">
@@ -164,7 +177,7 @@
 					<div style="position: absolute; width: 30%; left:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>ARIADNEplus</h2>
 						<!-- <smaller>EAMENA-0164997</smaller> -->
-						<p> The <b>Visual Media Service</b> for the showcase of 3D data, RTI and gigapixel image (IIIF). Use 3DHOP for 3D models<br>
+						<p> The <b>Visual Media Service</b> for the showcase of 3D data, RTI and gigapixel image (IIIF). Uses 3DHOP for 3D models<br>
 						<br>
 						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
 					</div>
