--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -198,7 +198,7 @@
 				</section>
 
 				<section data-background-iframe="https://zoometh.github.io/3DHOP/minimal/cogul.html">
-					<div style="position: absolute; width: 30%; left:-200px ; top:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+					<div style="position: absolute; width: 30%; right:-200px ; top:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h2>3DHOP/GitHub</h2>
 						<!-- <smaller>EAMENA-0164997</smaller> -->
 						<p>We propose an integration of our research on 3DHOP/GitHub<br>
